--- a/sources/index.html
+++ b/sources/index.html
@@ -1,229 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My OS Platform</title>
-    <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css">
-    <style>
-        body {
-            font-size: 14px;
-            padding:10px;
-            /*
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select:none;
-            user-select:none;
-            -o-user-select:none; 
-            -khtml-user-select:none;
-            */
-        }
-        #request-list-container {
-            position:fixed;top:38px;left:10px;right:10px;bottom:180px;overflow:auto;
-            border: 1px solid #ddd;
-        }
-        #request-list {
-            border:0px;
-            margin:0px 0px -1px 0px;
-        }
-        #request-list th.time,
-        #request-list th.device {
-            min-width: 130px;
-            max-width: 130px;
-        }
-        #request-list th.config {
-            min-width:70px;
-            max-width:70px;
-        }
-        #request-list td {
-            white-space: nowrap;
-            overflow: hidden;
-        }
-        #request-list th.time,
-        #request-list td.time {
-            border-left:0px;
-        }
-        #request-list th.config,
-        #request-list td.config {
-            border-right:0px;
-        }
-        #request-list td.request,
-        #request-list td.local-file {
-            max-width: 400px;
-        }
-        #log-list-container {
-            position:fixed;left:10px;right:10px;bottom:10px;height:160px;overflow:auto;
-            border: 1px solid #ddd;
-        }
-        #log-list {
-            margin: 0px;
-            padding: 0px;
-            font-size: 12px;
-        }
-        #log-list>li {
-            list-style-type: none;
-            padding:2px 4px;
-            white-space: nowrap;
-        }
-    </style>
-</head>
-<body>
-    <button class="btn btn-default btn-xs" onclick="gui.Window.get().showDevTools()" style="position:fixed;right:10px"><i class="fa fa-cog"></i> Debug</button>
-    <div class="container-fluid">
-        <div class="row">
-            <div id="title-container"></div>
-            <div id="request-list-container">
-                <table id="request-list" class="table table-striped table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th class="time"><i class="fa fa-clock-o"></i> <span></span></th>
-                            <th class="device"><i class="fa fa-tablet"></i> <span></span></th>
-                            <th class="request"><i class="fa fa-bolt"></i> <span></span></th>
-                            <th class="local-file"><i class="fa fa-file-o"></i> <span></span></th>
-                            <th class="config"><i class="fa fa-wrench"></i> <span></span></th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
-            <div id="log-list-container">
-                <div id="log-list"></div>
-            </div>
-        </div>
-    </div>
-    <input style="display:none;" id="fileDialog" type="file" />
-
-    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        'use strict';
-        /*
-        $('body').attr('unselectable','on')
-            .css({
-                '-moz-user-select':'none',
-                '-o-user-select':'none',
-                '-khtml-user-select':'none',  // you could also put this in a class
-                '-webkit-user-select':'none', // and add the CSS class here instead
-                '-ms-user-select':'none',
-                'user-select':'none'
-            })
-            .bind('selectstart', function(){ return false; })
-            .bind('mousedown', function(){ return false; });
-        */
-
-        var os          = require('os');
-        var fs          = require('fs');
-        var util        = require('util');
-        var moment      = require('moment');
-        var config      = require('./config');
-        var server      = require('./server');
-        var gui         = require('nw.gui');
-        var clipboard   = gui.Clipboard.get();
-        var lang        = {};
-        var keywords    = ['.pup', '.pkg', '/download/'];
-        var userLang    = navigator.language || navigator.userLanguage;
-        userLang        = userLang.toLowerCase();
-
-        if (process.platform === "darwin") {
-            var mb = new gui.Menu({type: 'menubar'});
-            mb.createMacBuiltin('Mustang', {
-                hideEdit: false,
-            });
-            gui.Window.get().menu = mb;
-        }
-        gui.Window.get().title = "Mustang";
-
-        function showLog(logText) {
-            var timeTitle = moment().format('MM-DD HH:mm:ss');
-            $('#log-list').append(util.format(
-                '<li>[%s] %s</li>', timeTitle, logText
-            ));
-            $('#log-list-container').scrollTop($('#log-list-container')[0].scrollHeight);
-        }
-
-        function copyUrl(el) {
-            clipboard.set($(el).parent('td').parent('tr').find('td.request').html(), 'text');
-        }
-
-        function takeFile(el) {
-            var chooser = $('#fileDialog');
-            chooser.unbind('change');
-            chooser.change(function(evt) {
-                var tr = $(el).parent('td').parent('tr');
-                tr.find('td.local-file').html($(this).val());
-                server.setLocalFile(tr.find('td.request')[0].innerText, $(this).val());
-                $(this).val('');
-            });
-            chooser.trigger('click'); 
-        }
-
-        function requestMonitor(req, isDownloadUrl) {
-            var timeTitle = moment().format('MM-DD HH:mm:ss');
-            var remoteAddress = req.socket.remoteAddress;
-            while (remoteAddress.indexOf(':')>-1) {
-                remoteAddress = remoteAddress.substr(remoteAddress.indexOf(':')+1);
-            }
-            showLog(util.format(
-                '[%s] %s', remoteAddress, req.url
-            ));
-            if (isDownloadUrl) {
-                var isNewUrl = true;
-                $('#request-list>tbody>tr').each(function(index, el) {
-                    var _url = $(el).find('td.request')[0].innerText;
-                    if(_url.indexOf(req.url) > -1 || req.url.indexOf(_url) > -1) {
-                        isNewUrl = false;
-                    }
-                });
-                if (isNewUrl) {
-                    var markups = [];
-                    markups.push('<tr>');
-                    markups.push('<td class="time">%s</td>');
-                    markups.push('<td class="device">%s</td>');
-                    markups.push('<td class="request">%s</td>');
-                    markups.push('<td class="local-file"></td>');
-                    markups.push('<td class="config">');
-                    markups.push('<a class="btn btn-default btn-xs copy-trigger" href="#" onclick="copyUrl(this)"><i class="fa fa-clipboard"></i> '+lang['request-list-row-trigger-copy']+'</a> ');
-                    markups.push('<a class="btn btn-default btn-xs file-selector-trigger" href="#" onclick="takeFile(this)"><i class="fa fa-file-o"></i> '+lang['request-list-row-trigger-file']+'</a> ');
-                    markups.push('</td>');
-                    markups.push('</tr>');
-                    $('#request-list>tbody').append(util.format(markups.join(''), timeTitle, remoteAddress, req.url));
-                    $('#request-list-container').scrollTop($('#request-list-container')[0].scrollHeight);
-                }
-            }
-        }
-
-        function whenDownloadFromLocalFile(event, filePath) {
-            showLog(util.format(
-                '<strong>%s %s<strong>', event, filePath
-            ));
-        }
-
-        function whenServerStart() {
-            var addr = null;
-            var interfaces = os.networkInterfaces();
-            for (var k in interfaces) {
-                for (var k2 in interfaces[k]) {
-                    var _addr = interfaces[k][k2];
-                    if (_addr.family === 'IPv4' && !_addr.internal && _addr.mac != '00:00:00:00:00:00') {
-                        addr = _addr.address;
-                        break;
-                    }
-                }
-            }
-            $('#title-container').html(util.format(lang['server-status'], addr, config.port));
-        }
-
-        fs.exists('./i18n/'+userLang+'.json', function(exists) {
-            if (!exists) {
-                userLang = 'en-us';
-            }
-            lang = require('./i18n/'+userLang+'.json');
-            $('#request-list>thead>tr>th').each(function(index, el) {
-                $(el).find('span').html(lang['request-list-header-column-'+$(el).attr('class')]);
-            });
-            server.fire(config.port, requestMonitor, whenDownloadFromLocalFile, whenServerStart); 
-        });
-    </script>
-</body>
-</html>
+master
